fix legend too long

--- a/Frontend/src/css/center_div.css
+++ b/Frontend/src/css/center_div.css
@@ -1,5 +1,5 @@
 .center_div{
-    position: absolute;
+    /* position: absolute; */
     left: 15%;
     height: auto;
     background-color: #282c34;
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     width: 70%;
+    margin: auto;
     margin-top: 5vh;
     /* overflow: auto; */
 }
